ingress/ingress-resources/domain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test2
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: test-service
            port:
              number: 9090
        pathType: Prefix
        path: /
