ingress/ingress-resources/ingress-resource-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test1
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: test-service
            port:
              number: 9090
        pathType: Prefix
